--- a/plugin.yml
+++ b/plugin.yml
@@ -1,13 +1,13 @@
 name: VoteParty
 author: ErikPDev
-api: 4.0.0
-version: 1.4
+api: 5.0.0
+version: 1.5+dev
 main: ErikPDev\VoteParty\Main
 softdepend:
   - BetterVoting
   - PocketVote
   - ScoreHud
-  - Scoreboard
+  - Voting38
 commands:
   voteparty:
     description: "Call the VoteParty Event"
